Fix to correctly handle overflow for code blocks

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -349,6 +349,10 @@ strong code {
   font-size: .88em
 }
 
+.post-content>pre {
+  display: grid;
+}
+
 /* Header */
 .header {
   background-color: var(--header);
